update test case products

--- a/4-Tests/4.2-Results-products/report.html
+++ b/4-Tests/4.2-Results-products/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,6477],[],[[4,0,0,[],[1,3056,137],[]],[5,0,0,[],[1,3194,169],[]],[6,0,0,[],[1,3364,150],[]],[7,0,0,[],[1,3515,145],[]]],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,13262],[],[[4,0,5,[],[1,2885,148],[]],[6,0,7,[],[1,3034,160],[]],[8,0,9,[],[1,3195,142],[]],[10,0,11,[],[1,3338,135],[]],[12,0,13,[],[1,3475,377],[]],[14,0,15,[],[1,3853,283],[]],[16,0,17,[],[1,4136,6303],[]]],[],[7,7,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Products-Test","*C:\\Users\\ThodT\\Downloads\\GitHub\\test-automation-fo-sauce-demo\\4-Tests\\products-test.robot","*../products-test.robot","*TC-Products-001:","*TC-Products-002:","*TC-Products-003:","*TC-Products-004:"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Products-Test","*C:\\Users\\ThodT\\Downloads\\GitHub\\test-automation-fo-sauce-demo\\4-Tests\\products-test.robot","*../products-test.robot","*TC-Products-001: ตรวจสอบ Filter","*<p>กรณี ให้แสดง ชื่อรายการสินค้า เรียงจาก A ถึง Z\x3c/p>","*TC-Products-002: ตรวจสอบ Filter","*<p>กรณี ให้แสดง ชื่อรายการสินค้า เรียงจาก Z ถึง A\x3c/p>","*TC-Products-003: ตรวจสอบ Filter","*<p>กรณี ให้แสดง ราคารายการสินค้า เรียงจาก น้อยสุด ไป มากสุด\x3c/p>","*TC-Products-004: ตรวจสอบ Filter","*<p>กรณี ให้แสดง ราคารายการสินค้า เรียงจาก มากสุด ไป น้อยสุด\x3c/p>","*TC-Products-005: ตรวจสอบ ปุ่ม Add to Cart","*<p>กรณี กดปุ่มเพิ่มสินค้า และ ยกเลิกสินค้า ทั้งหมด\x3c/p>","*TC-Products-006: ตรวจสอบ การอัปเดตของ ตะกร้าสินค้า","*<p>กรณี เพิ่มสินค้า\x3c/p>","*TC-Products-007: ตรวจสอบ การอัปเดตของ ตะกร้าสินค้า","*<p>กรณี ยกเลิกสินค้า\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Products-Test","name":"Products-Test","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":7,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Products-Test","name":"Products-Test","pass":7,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1728243758620;
+window.output["baseMillis"] = 1728308902975;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6502;
+window.output["generated"] = 13298;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
